tdf#130984: use RegexMatcher::region to properly limit the search

This allows to pass enough of the text into the matcher to have the
context for anchors/assertions, and at the same time, control the
search region correctly for the cases where the end position is not
at the end of the passed text, like when searching only inside runs
of text having specified attributes.

Change-Id: I6d1ff379c61cec734c0aa2a1dd913b1a73c5b84d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89660
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>